UI upgrade && github proj.
